[gd_scene load_steps=3 format=3 uid="uid://t467r05tqrwe"]

[ext_resource type="Script" path="res://objects/nodes/scene/scene.gd" id="1_cd34d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1n41"]
bg_color = Color(0, 0.501961, 0.501961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.501961, 0, 0.12549)
border_blend = true

[node name="Scene" type="GraphNode"]
offset_right = 372.0
offset_bottom = 245.0
theme_override_styles/titlebar = SubResource("StyleBoxFlat_l1n41")
resizable = true
title = "Scene"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_cd34d")

[node name="Input" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
text = "In"

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="StartSeparator" type="HSeparator" parent="Container"]
layout_mode = 2

[node name="LabelBox" type="VBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="LabelText" type="Label" parent="Container/LabelBox"]
layout_mode = 2
text = "Label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelInput" type="LineEdit" parent="Container/LabelBox"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Scene label"
alignment = 1

[node name="TextBox" type="VBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="TextText" type="Label" parent="Container/TextBox"]
layout_mode = 2
text = "Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput" type="TextEdit" parent="Container/TextBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Scene text"
scroll_fit_content_height = true

[node name="FinishSeparator" type="HSeparator" parent="Container"]
layout_mode = 2

[node name="MenuBox" type="HBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="MenuButton" type="CheckButton" parent="Container/MenuBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Menu"
alignment = 1

[node name="MenuAddButton" type="Button" parent="Container/MenuBox"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
disabled = true
text = "+"

[node name="MenuRemoveButton" type="Button" parent="Container/MenuBox"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
disabled = true
text = "-"

[node name="Output" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Out"
horizontal_alignment = 2

[connection signal="toggled" from="Container/MenuBox/MenuButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Container/MenuBox/MenuAddButton" to="." method="_on_menu_add_button_pressed"]
[connection signal="pressed" from="Container/MenuBox/MenuRemoveButton" to="." method="_on_menu_remove_button_pressed"]
